# calling_agent_app

./: .gitignore  QUICK_START.md  README.md  claude.md  start-app.bat  stop-app.bat
.claude/: settings.local.json
backend/: .env.example  pyproject.toml  requirements.txt  setup-uv.bat  start-backend.bat  test-places-api.py
backend/app/: config.py  database.py  main.py
backend/app/adapters/: base.py  factory.py  retell_adapter.py  vapi_adapter.py
backend/app/models/: agent.py  call.py  lead.py  place.py  webhook.py
backend/app/routers/: agents.py  calls.py  import_files.py  leads.py  search.py  webhooks.py
backend/app/services/: call_service.py  file_parser.py  lead_service.py  search_service.py  webhook_service.py
backend/database/: README.md  schema.sql
frontend/: .env.example  THEME-UPDATE.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: layout.tsx
frontend/src/app/agents/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/import/: page.tsx
frontend/src/app/landing/: page.tsx
frontend/src/app/leads/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/components/: animated-background.tsx  nav.tsx  providers.tsx  theme-toggle.tsx
frontend/src/components/agents/: create-agent-dialog.tsx  edit-agent-dialog.tsx  sync-vapi-dialog.tsx
frontend/src/components/calling/: call-dialog.tsx  web-call-dialog.tsx
frontend/src/styles/: globals.css
frontend/src/types/: agent.ts  api.ts  call.ts  lead.ts  place.ts
(+23 files in other folders)
